[gd_scene load_steps=129 format=3 uid="uid://rtl6bq6dgnn7"]

[ext_resource type="Script" uid="uid://diwkkn4bwd2xc" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://ccrjwibxkesl4" path="res://assets/textures/other/shadow.png" id="2_ujl30"]
[ext_resource type="Texture2D" uid="uid://b4kdmqldsu14w" path="res://assets/textures/player/player-down-_00005.png" id="3_2dvfe"]
[ext_resource type="Texture2D" uid="uid://cklonc2cixvo1" path="res://assets/textures/player/spr_player_carryIdle_left_strip05.png" id="3_ujl30"]
[ext_resource type="Texture2D" uid="uid://dl7pryc51joi0" path="res://assets/textures/player/spr_player_carryIdle_right_strip05.png" id="4_31cv2"]
[ext_resource type="Texture2D" uid="uid://8xt4rpexx0b1" path="res://assets/textures/player/player-down-_00006.png" id="4_giy8y"]
[ext_resource type="Texture2D" uid="uid://da3y4os40apa7" path="res://assets/textures/player/player-down-_00007.png" id="5_fdfoy"]
[ext_resource type="Texture2D" uid="uid://d3065rrimusko" path="res://assets/textures/player/spr_player_carryIdle_up_strip05.png" id="5_pf23h"]
[ext_resource type="Texture2D" uid="uid://b7tdsh8rxmg0c" path="res://assets/textures/player/player-down-_00008.png" id="6_hhpqf"]
[ext_resource type="Texture2D" uid="uid://jfxooc8rtsb4" path="res://assets/textures/player/spr_player_carry_left_strip04.png" id="7_wqfne"]
[ext_resource type="Texture2D" uid="uid://bwkx4fju6oxuw" path="res://assets/textures/player/spr_player_carry_right_strip04.png" id="8_wnwbv"]
[ext_resource type="Texture2D" uid="uid://d1mgrgpr0v7a3" path="res://assets/textures/player/spr_player_carry_up_strip04.png" id="9_gl8cc"]
[ext_resource type="Texture2D" uid="uid://du2bym2lo15x2" path="res://assets/textures/player/player-down-_00010.png" id="10_g5jhy"]
[ext_resource type="Texture2D" uid="uid://dufi2ey7hik3h" path="res://assets/textures/player/spr_player_idle_left_strip04.png" id="11_487ah"]
[ext_resource type="Texture2D" uid="uid://dpjqc6fbrv4mw" path="res://assets/textures/player/player-down-_00011.png" id="11_holxr"]
[ext_resource type="Texture2D" uid="uid://dbtigjfkej807" path="res://assets/textures/player/spr_player_idle_right_strip04.png" id="12_md1ol"]
[ext_resource type="Texture2D" uid="uid://bfjiljo3fgojt" path="res://assets/textures/player/player-down-_00013.png" id="12_mx1m4"]
[ext_resource type="Texture2D" uid="uid://bknrye5rqbvsq" path="res://assets/textures/player/spr_player_idle_up_strip04.png" id="13_bj30b"]
[ext_resource type="Texture2D" uid="uid://dnqticodyuk0v" path="res://assets/textures/player/spr_player_pickUp_left_strip05.png" id="15_hax0n"]
[ext_resource type="Texture2D" uid="uid://b01ijyiglftpj" path="res://assets/textures/player/player-down-_00001.png" id="16_4gjji"]
[ext_resource type="Texture2D" uid="uid://bac3sjao6neoi" path="res://assets/textures/player/spr_player_pickUp_right_strip05.png" id="16_t4otl"]
[ext_resource type="Texture2D" uid="uid://ch6r4atdpvixl" path="res://assets/textures/player/spr_player_pickUp_up_strip05.png" id="17_j2b1d"]
[ext_resource type="Texture2D" uid="uid://c7l8hrmjsbhet" path="res://assets/textures/player/player-down-_00002.png" id="17_u2ulf"]
[ext_resource type="Texture2D" uid="uid://cat87p2r780i5" path="res://assets/textures/player/player-down-_00003.png" id="18_6e8lb"]
[ext_resource type="Texture2D" uid="uid://xqak7xe5uyew" path="res://assets/textures/player/spr_player_putDown_left_strip06.png" id="19_2dvfe"]
[ext_resource type="Texture2D" uid="uid://cpchn35x5c3qs" path="res://assets/textures/player/player-down-_00004.png" id="19_2gdjj"]
[ext_resource type="Texture2D" uid="uid://dtvp18bu2it73" path="res://assets/textures/player/spr_player_putDown_right_strip06.png" id="20_giy8y"]
[ext_resource type="Texture2D" uid="uid://briepm8rcqy6r" path="res://assets/textures/player/spr_player_putDown_up_strip06.png" id="21_fdfoy"]
[ext_resource type="Texture2D" uid="uid://d0q82y88otifr" path="res://assets/textures/player/spr_player_walk_left_strip04.png" id="23_g5jhy"]
[ext_resource type="Texture2D" uid="uid://b1deun0yw0qkt" path="res://assets/textures/player/player-down-_00018.png" id="23_sc3ue"]
[ext_resource type="Texture2D" uid="uid://ccxxv6yxs3cy5" path="res://assets/textures/player/spr_player_walk_right_strip04.png" id="24_holxr"]
[ext_resource type="Texture2D" uid="uid://bc87pxanpwpv" path="res://assets/textures/player/player-down-_00019.png" id="24_lxlsd"]
[ext_resource type="Texture2D" uid="uid://d4af7q1gqej13" path="res://assets/textures/player/player-down-_00020.png" id="25_ha2mi"]
[ext_resource type="Texture2D" uid="uid://kpftq1qjqj2y" path="res://assets/textures/player/spr_player_walk_up_strip04.png" id="25_mx1m4"]
[ext_resource type="Texture2D" uid="uid://chdqk7q2lldnj" path="res://assets/textures/player/player-down-_00021.png" id="26_apa73"]
[ext_resource type="Texture2D" uid="uid://rwx7yeuimovi" path="res://assets/textures/player/player-down-_00022.png" id="27_74r1k"]
[ext_resource type="Texture2D" uid="uid://betkx2ua2s5lw" path="res://assets/textures/player/player-down-_00024.png" id="31_8svfe"]
[ext_resource type="Texture2D" uid="uid://ba2yn5wp3gnf1" path="res://assets/textures/player/player-down-_00025.png" id="32_2a3c5"]
[ext_resource type="Texture2D" uid="uid://jwblvj6q2sk4" path="res://assets/textures/player/player-down-_00027.png" id="33_42b1b"]
[ext_resource type="Texture2D" uid="uid://wicu7fqdwssb" path="res://assets/textures/player/player-down-_00028.png" id="34_h7ic4"]
[ext_resource type="Texture2D" uid="uid://cduoe64hauhgc" path="res://assets/textures/player/player-down-_00012.png" id="38_au7lq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("3_ujl30")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("3_ujl30")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("3_ujl30")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("3_ujl30")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("3_ujl30")
region = Rect2(1012, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("4_31cv2")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("4_31cv2")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("4_31cv2")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("4_31cv2")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubpm"]
atlas = ExtResource("4_31cv2")
region = Rect2(1012, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua5cf"]
atlas = ExtResource("5_pf23h")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ujp"]
atlas = ExtResource("5_pf23h")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk41t"]
atlas = ExtResource("5_pf23h")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuw3a"]
atlas = ExtResource("5_pf23h")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_8txt3"]
atlas = ExtResource("5_pf23h")
region = Rect2(1012, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_vau08"]
atlas = ExtResource("7_wqfne")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsb7e"]
atlas = ExtResource("7_wqfne")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjsmb"]
atlas = ExtResource("7_wqfne")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwp2n"]
atlas = ExtResource("7_wqfne")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yhus"]
atlas = ExtResource("8_wnwbv")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlll7"]
atlas = ExtResource("8_wnwbv")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6i7"]
atlas = ExtResource("8_wnwbv")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3st"]
atlas = ExtResource("8_wnwbv")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_1da1t"]
atlas = ExtResource("9_gl8cc")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_p21yu"]
atlas = ExtResource("9_gl8cc")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_irpag"]
atlas = ExtResource("9_gl8cc")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpsgo"]
atlas = ExtResource("9_gl8cc")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx8is"]
atlas = ExtResource("11_487ah")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx63k"]
atlas = ExtResource("11_487ah")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw0jh"]
atlas = ExtResource("11_487ah")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry8ed"]
atlas = ExtResource("11_487ah")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_au8ao"]
atlas = ExtResource("12_md1ol")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5j5w"]
atlas = ExtResource("12_md1ol")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbf1i"]
atlas = ExtResource("12_md1ol")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vfid"]
atlas = ExtResource("12_md1ol")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljgr3"]
atlas = ExtResource("13_bj30b")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr8ja"]
atlas = ExtResource("13_bj30b")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvmy4"]
atlas = ExtResource("13_bj30b")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcu33"]
atlas = ExtResource("13_bj30b")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_reqs7"]
atlas = ExtResource("15_hax0n")
region = Rect2(0, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yjfb"]
atlas = ExtResource("15_hax0n")
region = Rect2(200, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnnjp"]
atlas = ExtResource("15_hax0n")
region = Rect2(400, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqna8"]
atlas = ExtResource("15_hax0n")
region = Rect2(600, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7gmo"]
atlas = ExtResource("15_hax0n")
region = Rect2(800, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_kft7l"]
atlas = ExtResource("16_t4otl")
region = Rect2(0, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_2s4os"]
atlas = ExtResource("16_t4otl")
region = Rect2(200, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_2em0j"]
atlas = ExtResource("16_t4otl")
region = Rect2(400, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe2k6"]
atlas = ExtResource("16_t4otl")
region = Rect2(600, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_edwuo"]
atlas = ExtResource("16_t4otl")
region = Rect2(800, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eiju"]
atlas = ExtResource("17_j2b1d")
region = Rect2(0, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_uukdq"]
atlas = ExtResource("17_j2b1d")
region = Rect2(200, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k3j0"]
atlas = ExtResource("17_j2b1d")
region = Rect2(400, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bpox"]
atlas = ExtResource("17_j2b1d")
region = Rect2(600, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c21n"]
atlas = ExtResource("17_j2b1d")
region = Rect2(800, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3eqm"]
atlas = ExtResource("19_2dvfe")
region = Rect2(0, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_plx2b"]
atlas = ExtResource("19_2dvfe")
region = Rect2(200, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_3capk"]
atlas = ExtResource("19_2dvfe")
region = Rect2(400, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg5hq"]
atlas = ExtResource("19_2dvfe")
region = Rect2(600, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp0if"]
atlas = ExtResource("19_2dvfe")
region = Rect2(800, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xkbm"]
atlas = ExtResource("19_2dvfe")
region = Rect2(1000, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqoq3"]
atlas = ExtResource("20_giy8y")
region = Rect2(0, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8tjj"]
atlas = ExtResource("20_giy8y")
region = Rect2(200, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ptwb"]
atlas = ExtResource("20_giy8y")
region = Rect2(400, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pj6w"]
atlas = ExtResource("20_giy8y")
region = Rect2(600, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_08upi"]
atlas = ExtResource("20_giy8y")
region = Rect2(800, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tsya"]
atlas = ExtResource("20_giy8y")
region = Rect2(1000, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_68qdx"]
atlas = ExtResource("21_fdfoy")
region = Rect2(0, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccnn6"]
atlas = ExtResource("21_fdfoy")
region = Rect2(200, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcvyg"]
atlas = ExtResource("21_fdfoy")
region = Rect2(400, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_ealyq"]
atlas = ExtResource("21_fdfoy")
region = Rect2(600, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_qms75"]
atlas = ExtResource("21_fdfoy")
region = Rect2(800, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lovq"]
atlas = ExtResource("21_fdfoy")
region = Rect2(1000, 0, 200, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_72noi"]
atlas = ExtResource("23_g5jhy")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j382"]
atlas = ExtResource("23_g5jhy")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3jfe"]
atlas = ExtResource("23_g5jhy")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvigm"]
atlas = ExtResource("23_g5jhy")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ej1x"]
atlas = ExtResource("24_holxr")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlfvf"]
atlas = ExtResource("24_holxr")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_i18u8"]
atlas = ExtResource("24_holxr")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_46bxm"]
atlas = ExtResource("24_holxr")
region = Rect2(759, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_llmf1"]
atlas = ExtResource("25_mx1m4")
region = Rect2(0, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_qywrh"]
atlas = ExtResource("25_mx1m4")
region = Rect2(253, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_jopkk"]
atlas = ExtResource("25_mx1m4")
region = Rect2(506, 0, 253, 328)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l1xu"]
atlas = ExtResource("25_mx1m4")
region = Rect2(759, 0, 253, 328)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2dvfe")
}, {
"duration": 1.0,
"texture": ExtResource("4_giy8y")
}, {
"duration": 1.0,
"texture": ExtResource("5_fdfoy")
}, {
"duration": 1.0,
"texture": ExtResource("5_fdfoy")
}, {
"duration": 1.0,
"texture": ExtResource("6_hhpqf")
}],
"loop": true,
"name": &"carryIdleDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svfe")
}],
"loop": true,
"name": &"carryIdleLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}],
"loop": true,
"name": &"carryIdleRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ujp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk41t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuw3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8txt3")
}],
"loop": true,
"name": &"carryIdleUp",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_g5jhy")
}, {
"duration": 1.0,
"texture": ExtResource("11_holxr")
}, {
"duration": 1.0,
"texture": ExtResource("12_mx1m4")
}, {
"duration": 1.0,
"texture": ExtResource("12_mx1m4")
}],
"loop": true,
"name": &"carryWalkDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vau08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsb7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjsmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwp2n")
}],
"loop": true,
"name": &"carryWalkLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yhus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlll7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk6i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c3st")
}],
"loop": true,
"name": &"carryWalkRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1da1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p21yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irpag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpsgo")
}],
"loop": true,
"name": &"carryWalkUp",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_4gjji")
}, {
"duration": 1.0,
"texture": ExtResource("17_u2ulf")
}, {
"duration": 1.0,
"texture": ExtResource("18_6e8lb")
}, {
"duration": 1.0,
"texture": ExtResource("19_2gdjj")
}],
"loop": true,
"name": &"idleDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx8is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx63k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw0jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry8ed")
}],
"loop": true,
"name": &"idleLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_au8ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5j5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbf1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vfid")
}],
"loop": true,
"name": &"idleRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljgr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr8ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvmy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcu33")
}],
"loop": true,
"name": &"idleUp",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_sc3ue")
}, {
"duration": 1.0,
"texture": ExtResource("24_lxlsd")
}, {
"duration": 1.0,
"texture": ExtResource("25_ha2mi")
}, {
"duration": 1.0,
"texture": ExtResource("26_apa73")
}, {
"duration": 1.0,
"texture": ExtResource("27_74r1k")
}],
"loop": false,
"name": &"pickupDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_reqs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yjfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnnjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqna8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7gmo")
}],
"loop": false,
"name": &"pickupLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kft7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s4os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2em0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe2k6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edwuo")
}],
"loop": false,
"name": &"pickupRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eiju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uukdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k3j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bpox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c21n")
}],
"loop": false,
"name": &"pickupUp",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_8svfe")
}, {
"duration": 1.0,
"texture": ExtResource("32_2a3c5")
}, {
"duration": 1.0,
"texture": ExtResource("33_42b1b")
}, {
"duration": 1.0,
"texture": ExtResource("34_h7ic4")
}, {
"duration": 1.0,
"texture": ExtResource("34_h7ic4")
}],
"loop": false,
"name": &"putdownDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3eqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plx2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3capk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg5hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp0if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xkbm")
}],
"loop": false,
"name": &"putdownLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqoq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8tjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ptwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pj6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08upi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tsya")
}],
"loop": false,
"name": &"putdownRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68qdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccnn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcvyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ealyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qms75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lovq")
}],
"loop": false,
"name": &"putdownUp",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_g5jhy")
}, {
"duration": 1.0,
"texture": ExtResource("11_holxr")
}, {
"duration": 1.0,
"texture": ExtResource("38_au7lq")
}, {
"duration": 1.0,
"texture": ExtResource("12_mx1m4")
}],
"loop": true,
"name": &"walkDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72noi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j382")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3jfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvigm")
}],
"loop": true,
"name": &"walkLeft",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ej1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlfvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i18u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46bxm")
}],
"loop": true,
"name": &"walkRight",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_llmf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qywrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jopkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l1xu")
}],
"loop": true,
"name": &"walkUp",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fjrip"]
radius = 42.0
height = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ke2ow"]
radius = 198.01

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 14
motion_mode = 1
script = ExtResource("1_g2els")
walkSpeed = 500.0
runSpeed = 1000.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"walkDown"
autoplay = "idleDown"
frame = 2
frame_progress = 0.276187
offset = Vector2(-4, -205.22)

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
y_sort_enabled = true
position = Vector2(-1, -11)
texture = ExtResource("2_ujl30")
offset = Vector2(0, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_fjrip")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)
limit_left = 0
limit_top = 0
limit_right = 4000
limit_bottom = 2400

[node name="Awareness" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Awareness"]
position = Vector2(0, -99)
shape = SubResource("CircleShape2D_ke2ow")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Awareness" to="." method="_on_awareness_body_entered"]
[connection signal="body_exited" from="Awareness" to="." method="_on_awareness_body_exited"]
